Fix: invisible escapter in code block

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -46,8 +46,8 @@ $marker: (
 }
 
 // patch escaper visibility in code block
-.md-editor code .md-escaper {
-  font-size: unset;
+.md-editor code .md-escaperm {
+  font-size: 1rem;
   color: $codeBlockFontColor;
 }
 
